--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.1.5",
     "bootstrap": "^4.6.0",
+    "canvas": "^2.7.0",
     "next": "^10.0.9",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
